--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/unscript/express-test/issues"
   },
-  "homepage": "https://github.com/unscript/express-test#readme"
+  "homepage": "https://github.com/unscript/express-test#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
