--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "express-test",
   "version": "0.0.1",
+  "private": true,
   "description": "express testing",
   "main": "index.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +25,12 @@
   },
   "homepage": "https://github.com/unscript/express-test#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
