--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "express testing",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/unscript/express-test/issues"
   },
-  "homepage": "https://github.com/unscript/express-test#readme"
+  "homepage": "https://github.com/unscript/express-test#readme",
+  "dependencies": {
+    "express": "^4.14.1"
+  }
 }
